# RotatingMHD

./: .gitignore  AdvectionDiffusion.sh  CMakeLists.txt  Christensen.sh  Couette.prm  Couette.sh  CouetteFlow.sh  DFG.sh  Guermond.sh  GuermondNeumannBC.sh  MIT.sh  README.md  TGV.sh  ThermalTGV.sh  clean.sh  find_the_culprit.py  run_convergence_tests.py  step-35.sh
.github/workflows/: commit_push.yml  issues_push.yml  main.yml
Benchmarks/MITBenchmark/: 2R_a1.point  2R_a5.point  3R.point  4R_a1.point  temperature.point
applications/: AdvectionDiffusion.cc  AdvectionDiffusion.prm  CMakeLists.txt  Christensen.cc  Christensen.prm  Couette.cc  Couette.prm  CouetteFlow.cc  CouetteFlow.prm  CouetteFlowConvergence.prm  DFG.cc  DFG.prm  Diffusion.cc  Diffusion.prm  Diffusion5.cc  Guermond.cc  Guermond.csv  Guermond.prm  Guermond103.cc  GuermondLog.txt  GuermondNeumannBC.cc  GuermondNeumannBC.prm  Guermond_times_dt.csv  MIT.cc  MIT.msh  MIT.prm  TGV.cc  TGV.prm  TGVConvergence.prm  TGV_dirichlet.csv  TGV_periodic.csv  TGV_times_dt_dirichlet.csv  TGV_times_dt_periodic.csv  TaylorGreenVortexLog.txt  ThermalTGV.cc  ThermalTGV.prm  ThermalTGVConvergence.prm  dfg.inp  main.cc  parameter_file.prm  (+2 more)
benchmarks/MIT/: 2R.point  3R_a1.point  4R.point  4R_a3.point
benchmarks/step-35/: nsbench2.inp  parameter-file.prm  step-35.cc
convergence_tests/: CMakeLists.txt  Couette.cc  Guermond.cc  GuermondNeumannBC.cc  TGV.cc  TGV.prm  ThermalTGV.cc
documentation/: CMakeLists.txt  Doxyfile  latex_macros.tex  mainpage.txt  mathjax_macros.js
documentation/theory/: Laplace.ogv  Transpose.ogv  main.tex
geometries/: CMakeLists.txt  MIT.geo  dfg_benchmark.cc  prm.prm
include/rotatingMHD/: angular_velocity.h  assembly_data.h  assembly_data_base.h  auxiliary_functions.h  basic_parameters.h  benchmark_data.h  boundary_conditions.h  convection_diffusion_parameters.h  convection_diffusion_problem.h  convection_diffusion_solver.h  convergence_struct.h  convergence_test.h  data_postprocessors.h  discrete_time.h  entities_structs.h  equation_data.h  exceptions.h  finite_element_field.h  general_parameters.h  global.h  heat_equation.h  hydrodynamic_problem.h  linear_solver_parameters.h  magnetic_induction.h  navier_stokes_parameters.h  navier_stokes_projection.h  problem_class.h  projection_solver.h  run_time_parameters.h  solver_class.h  time_discretization.h  utility.h  vector_tools.h
python/: Christensen_Benchmark_case_0_2.txt  Christensen_Benchmark_case_0_3.txt  Christensen_Benchmark_case_0_4.txt  Christensen_Benchmark_case_0_5.txt  Christensen_benchmark.py  DFG_benchmark.py  MIT_benchmark.py  compute_spectrum.py  run_tests.py
sandbox/: CMakeLists.txt  heat_equation.cc
scripts/: Couette.sh  Guermond.sh  MIT.sh  TGV.sh  dealii-install.sh  step-35.sh
source/: CMakeLists.txt  angular_velocity.cc  assembly_data.cc  auxiliary_functions.cc  basic_parameters.cc  benchmark_data.cc  boundary_conditions.cc  convection_diffusion.cc  convection_diffusion_parameters.cc  convection_diffusion_problem.cc  convection_diffusion_solver.cc  convergence_struct.cc  convergence_test.cc  data_postprocessors.cc  discrete_time.cc  entities_structs.cc  equation_data.cc  finite_element_field.cc  general_parameters.cc  heat_equation.cc  hydrodynamic_problem.cc  linear_solver_parameters.cc  magnetic_induction.cc  navier_stokes_parameters.cc  navier_stokes_projection.cc  problem_class.cc  projection_solver.cc  run_time_parameters.cc  solver_class.cc  time_discretization.cc  utility.cc  vector_tools.cc
source/convection_diffusion/: assemble_advection_matrix.cc  assemble_constant_matrices.cc  assemble_rhs.cc  assembly_data.cc  setup.cc  solve.cc
source/convection_diffusion_solver/: assemble_advection_matrix.cc  assemble_constant_matrices.cc  assemble_rhs.cc  setup.cc  solve.cc
source/heat_equation/: assemble_advection_matrix.cc  assemble_constant_matrices.cc  assemble_rhs.cc  assembly_data.cc  setup.cc  solve.cc
source/magnetic_induction/: assemble_advection_matrix.cc  assemble_diffusion_step_rhs.cc  assemble_initialization_step_rhs.cc  assemble_projection_step_rhs.cc  assembly_advection_matrix.cc  assembly_data.cc  assembly_diffusion_step_rhs.cc  assembly_projection_step_rhs.cc  assembly_zeroth_step_rhs.cc  setup.cc  solve.cc
source/navier_stokes_projection/: assemble_advection_matrix.cc  assemble_diffusion_rhs.cc  assemble_mass_and_laplace_matrices.cc  assemble_poisson_prestep_rhs.cc  assemble_projection_rhs.cc  assembly_data.cc  cfl_number.cc  diffusion_prestep_methods.cc  diffusion_step_methods.cc  initialize.cc  poisson_prestep_methods.cc  projection_step_methods.cc  setup.cc  solve.cc  timestep_udpate.cc  timestep_update.cc
source/projection_solver/: assemble_advection_matrix.cc  assemble_diffusion_step_rhs.cc  assemble_diffusion_system.cc  assemble_mass_and_laplace_matrices.cc  assemble_pressure_gradient_matrix.cc  assemble_projection_step_rhs.cc  assemble_projection_system.cc  assembly_data.cc  correction_step.cc  diffusion_step.cc  initialize_data.cc  initialize_matrices.cc  make_grid.cc  output_results.cc  postprocessing.cc  problem_setup.cc  projection_step.cc  setup_dofs.cc  setup_triangulation.cc  solve_diffusion_system.cc  solve_projection_system.cc  time_stepping.cc
src/mod_step-35/: CMakeLists.txt  parameter_file.prm  step-35.cc  step-35_barebones.cc  step-35_mod.cc
tests/: CMakeLists.txt  run_time_parameters.cc  test_preconditioners.cc  timestepping_coefficients.cc  timestepping_coefficients.output  timestepping_coefficients.prm  timestepping_scheme_convergence.cc
tests/applications/: CMakeLists.txt
tests/convergence_tests/: CMakeLists.txt
tests/rotatingMHD/: CMakeLists.txt  boundary_conditions.cc  boundary_conditions.output  convection_diffusion_fixed_step_size.cc  convection_diffusion_fixed_step_size.output  convection_diffusion_variable_step_size.cc  convection_diffusion_variable_step_size.output  data_postprocessors.cc  data_postprocessors.output  diffusion_fixed_step_size.cc  diffusion_fixed_step_size.output  diffusion_variable_step_size.cc  diffusion_variable_step_size.output  (+15 more)
(+27 files in other folders)
