option(RMHD_DOCUMENTATION "Build Doxygen documentation" ON)

IF (RMHD_DOCUMENTATION)
  # check if Doxygen is installed
  FIND_PACKAGE(Doxygen)
  IF (DOXYGEN_FOUND)
    # set input and output files
    SET(DOXYGEN_IN Doxyfile)
    SET(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
    
    # copy input to output file
    CONFIGURE_FILE(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
    MESSAGE("-- Configured to build Doxygen documentation")
    
    # create documentation
    ADD_CUSTOM_TARGET( doxygen
      COMMAND sed -i "s|INPUT = include|INPUT = ${CMAKE_CURRENT_SOURCE_DIR}/../../include|g" ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
      COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT} > warnings.out 2>&1
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT "Generating Doxygen documentation"
      VERBATIM )
  ENDIF (DOXYGEN_FOUND)
ENDIF (RMHD_DOCUMENTATION)
