# Set the source files to be compiled
SET(TARGET_SRC
    angular_velocity.cc
    basic_parameters.cc
    linear_solver_parameters.cc
    assembly_data.cc
    benchmark_data.cc
    boundary_conditions.cc
    convergence_test.cc
    convection_diffusion.cc
    data_postprocessors.cc
    discrete_time.cc
    finite_element_field.cc
    problem_class.cc
    run_time_parameters.cc
    time_discretization.cc
    utility.cc
    vector_tools.cc
    solver_class.cc
    # incompressible navier stokes
    navier_stokes_projection.cc
    navier_stokes_projection/assemble_advection_matrix.cc
    navier_stokes_projection/assemble_diffusion_rhs.cc
    navier_stokes_projection/assemble_mass_and_laplace_matrices.cc
    navier_stokes_projection/assemble_poisson_prestep_rhs.cc
    navier_stokes_projection/assemble_projection_rhs.cc
    navier_stokes_projection/assembly_data.cc
    navier_stokes_projection/diffusion_step_methods.cc
    navier_stokes_projection/poisson_prestep_methods.cc
    navier_stokes_projection/projection_step_methods.cc
    navier_stokes_projection/setup.cc
    navier_stokes_projection/solve.cc
    navier_stokes_projection/timestep_update.cc
    # convection diffusion equation
    convection_diffusion.cc
    convection_diffusion/assemble_advection_matrix.cc
    convection_diffusion/assemble_constant_matrices.cc
    convection_diffusion/assemble_rhs.cc
    convection_diffusion/assembly_data.cc
    convection_diffusion/setup.cc
    convection_diffusion/solve.cc
    # magnetic induction
    magnetic_induction.cc
    magnetic_induction/assembly_advection_matrix.cc
    magnetic_induction/assembly_data.cc
    magnetic_induction/assembly_diffusion_step_rhs.cc
    magnetic_induction/assembly_projection_step_rhs.cc
    magnetic_induction/assembly_initialization_step_rhs.cc
    magnetic_induction/setup.cc
    magnetic_induction/solve.cc
)
ADD_LIBRARY(rotatingMHD SHARED ${TARGET_SRC})
DEAL_II_SETUP_TARGET(rotatingMHD)
